--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ html {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  transition: all 0.5s;
 }
 
 body {
@@ -25,7 +26,7 @@ body {
 }
 
 main {
-  width: 85%;
+  width: min(85%, 800px);
   margin: auto;
   text-align: center;
 }
@@ -80,6 +81,7 @@ p {
 .download-button button:hover {
   cursor: pointer;
   opacity: 0.6;
+  transform: translateY(-3px);
 }
 
 .download-button button:nth-of-type(1) {
@@ -133,7 +135,7 @@ p {
 }
 
 .devices img {
-  width: 110%;
+  width: min(800px, 110%);
 }
 
 /* workflow */
@@ -168,8 +170,14 @@ p {
   row-gap: 50px;
 }
 
-.company-link div img {
+.company-link img {
   transform: scale(0.8);
+}
+
+.company-link a img:hover {
+  color: var(--Strong-Cyan);
+  opacity: 0.5;
+  transform: scale(0.85);
 }
 
 /* os */
@@ -204,12 +212,28 @@ footer {
   margin: 30px 0 40px;
   list-style-type: none;
   line-height: 2.8em;
+}
+
+.footer-content nav ul li a {
   color: var(--Dark-Grayish-Blue);
+  text-decoration: none;
+}
+
+.footer-content nav ul li:hover {
+  transform: translateY(-3px);
+}
+
+.footer-content nav ul li a:hover {
+  color: var(--Strong-Cyan);
 }
 
 .social-link {
   display: flex;
   column-gap: 40px;
+}
+
+.social-link a:hover {
+  transform: translateY(-3px);
 }
 
 .social-link a img {
@@ -224,18 +248,11 @@ footer {
   body {
     background-image: url("./images/bg-header-desktop.png");
   }
-  main {
-    max-width: 800px;
-  }
-  .devices img {
-    max-width: 575px;
-  }
 }
 
 @media screen and (min-width: 1250px) {
   main {
     width: unset;
-    max-width: unset;
   }
   h1 {
     font-size: 2.5em;
@@ -286,9 +303,6 @@ footer {
   .devices p {
     width: 88%;
   }
-  .devices img {
-    max-width: 800px;
-  }
   .workflow {
     width: 78%;
     margin: 90px auto 150px;
@@ -309,13 +323,15 @@ footer {
     grid-template-rows: 0.9fr 0.5fr 1fr;
     justify-items: center;
   }
+  .workflow-items div img {
+    margin-bottom: 10px;
+  }
   .workflow-items div h1 {
     font-size: 1.3em;
     margin: unset;
   }
   .workflow-items div p {
     font-size: 0.85em;
-    /* max-width: 400px; */
   }
   .company-link {
     margin: auto;
@@ -338,33 +354,26 @@ footer {
     padding: 35px 165px;
     flex-direction: row;
     justify-content: space-between;
-    column-gap: 130px;
   }
   .footer-content nav ul {
     margin: unset;
     margin-left: -170px;
     display: grid;
+    height: 66px;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 1fr);
+    grid-auto-flow: column;
     text-align: left;
     column-gap: 75px;
     row-gap: 20px;
     line-height: unset;
-  }
-  .footer-content nav ul li:nth-child(2) {
-    grid-column: 1/2;
-    grid-row: 2/3;
-  }
-  .footer-content nav ul li:nth-child(5) {
-    grid-column: 3/4;
-    grid-row: 1/2;
   }
   .social-link {
     column-gap: 25px;
   }
 }
 
-@media screen and (min-width:1440px) {
+@media screen and (min-width: 1440px) {
   body {
     background-image: url("./images/bg-header-desktop.png");
     background-size: 100%;
